fixing loading spinner alignment and striping

--- a/app/assets/stylesheets/common/base/discourse.scss
+++ b/app/assets/stylesheets/common/base/discourse.scss
@@ -201,7 +201,7 @@ body {
 }
 
 .spinner {
-  margin: 30px auto 0 auto;
+  margin: 20px auto 20px auto;
   position: relative;
   -webkit-animation: rotate-forever 1s infinite linear;
   animation: rotate-forever 1s infinite linear;
